[package]
name = "compute-hcaptcha"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = true

[dependencies]
fastly = "^0.7.3"
log-fastly = "0.1.4"
log = "0.4.11"
lol_html = "^0.2.0"
serde_json = "1.0.64"
aes = "0.7.4"
block-modes = "0.8.1"
hex-literal = "0.3.1"
hex = "0.4.3"
cookie = {version = "0.15.0", features = ["secure", "percent-encode"]}

[toolchain]
channel = "stable"
targets = [ "wasm32-wasi" ]
